--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,9 @@ get_paper("Letter", orientation = "landscape")
 get_card("Poker")
 ```
 
-papersize includes plotting functions that create lists of ggplot2 plots with repeated elements that can be assembled with patchwork into page layouts for print. For example, `plot_cards()` creates a list of Poker-card sized plots that can be tiled onto a letter-size patchwork to save and print.
+papersize includes plotting functions that create lists of ggplot2 plots with repeated elements that can be assembled with patchwork into page layouts for print.
+
+For example, `plot_cards()` creates a list of Poker-card sized plots that can be tiled onto a letter-size patchwork to save and print.
 
 ```{r plot_cards}
 papersize <-
@@ -75,4 +77,69 @@ page_layout(
 )
 ```
 
-papersize currently has very limited features but additional features are expected to include better support for multi-page layouts, control over the position of card elements, preset card formats/designs, and appropriate handling of cut-lines for DIY card printing.
+This more involved example uses the internal `add_card_border()` function to apply rectangular elements to the card plot:
+
+```{r}
+card <- get_card("Poker card")
+
+card_center <- card
+card_center[["x"]] <- 0
+card_center[["y"]] <- 0
+card_offset <- card_center
+card_offset[["y"]] <- 0.75
+
+card_plots <- plot_cards(
+  "Poker card",
+  fill = "white",
+  linetype = "solid",
+  color = "black",
+  linewidth = 0.45,
+  n = 8,
+  border = TRUE,
+  inset = 0
+)
+
+card_plots[[1]]
+```
+
+
+```{r}
+# Add outline of image
+bordered_cards <- add_card_border(
+  card_plots,
+  card = card_offset,
+  color = "black",
+  linewidth = 0.25,
+  linetype = "solid",
+  inset = c(0.2, 1)
+)
+
+bordered_cards[[1]]
+```
+
+```{r}
+bordered_cards <- bordered_cards |>
+  add_card_border(
+    card = card_center,
+    color = "gray50",
+    linewidth = 0.25,
+    linetype = "solid",
+    inset = c(0.1, 0.1)
+  )
+
+bordered_cards[[1]]
+```
+
+Card plots are then assembled in a page ready for export, printing, and cutting:
+
+```{r}
+card_page <- page_layout(
+  plots = bordered_cards,
+  page = "Letter",
+  orientation = "landscape"
+)
+
+card_page[[1]]
+```
+
+papersize currently has limited features but additional features are expected to include better support for multi-page layouts, control over the position of card elements, preset card formats/designs, and appropriate handling of cut-lines for DIY card printing.
